--- a/web-tea-house/web-tea-house/Shared/Header.razor
+++ b/web-tea-house/web-tea-house/Shared/Header.razor
@@ -1,5 +1,58 @@
-﻿<h3>Header</h3>
-
-@code {
-
-}
+﻿<!-- Navbar Start -->
+<div class="container-fluid bg-white sticky-top">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
+            <a href="/" class="navbar-brand">
+                <img class="img-fluid" src="img/logo.png" alt="Logo">
+            </a>
+            <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ms-auto">
+                    <a href="/" class="nav-item nav-link active">Головна</a>
+                    <a href="about" class="nav-item nav-link">Про нас</a>
+                    <a href="products" class="nav-item nav-link">Продукти</a>
+                    <a href="shop-tea" class="nav-item nav-link">Магазин чаю</a>
+                    <a href="blog" class="nav-item nav-link">Блог</a>
+                    <a href="contact" class="nav-item nav-link">Контакти</a>
+                </div>
+            </div>
+        </nav>
+    </div>
+</div>
+<!-- Navbar End -->
+<!-- Carousel Start -->
+<div class="container-fluid px-0 mb-5">
+    <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                <div class="carousel-caption">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-7 text-center">
+                                <p class="fs-4 text-white animated zoomIn">Ласкаво просимо до <strong class="text-dark">TEA House</strong></p>
+                                <h1 class="display-1 text-dark mb-4 animated zoomIn">Органічне виробництво чаю високої якості</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                <div class="carousel-caption">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-7 text-center">
+                                <p class="fs-4 text-white animated zoomIn">Ласкаво просимо до <strong class="text-dark">TEA House</strong></p>
+                                <h1 class="display-1 text-dark mb-4 animated zoomIn">Органічне виробництво чаю високої якості</h1>
+                                <a href="" class="btn btn-light rounded-pill py-3 px-5 animated zoomIn">Дізнатися більше</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
