--- a/web-tea-house/web-tea-house/Shared/Footer.razor
+++ b/web-tea-house/web-tea-house/Shared/Footer.razor
@@ -48,7 +48,7 @@
             </div>
             <div class="col-md-6 text-center text-md-end">
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                Розроблено <a class="fw-medium" href="https://htmlcodex.com">Анастасією Столярчук</a> GitHub <a class="fw-medium" href="https://themewagon.com">Tea House</a>
+                Розроблено <a class="fw-medium" href="https://htmlcodex.com">Анастасією Столярчук</a> GitHub <a class="fw-medium" href="https://github.com/anstr23/tea-house">Tea House</a>
             </div>
         </div>
     </div>
